[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://Game.Godot/Scripts/Main.gd" id="1_0k4m0"]
[ext_resource type="PackedScene" path="res://Game.Godot/Scenes/UI/HUD.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Game.Godot/Scenes/UI/MainMenu.tscn" id="3"]
[ext_resource type="Theme" path="res://Game.Godot/Themes/default_theme.tres" id="5"]
[ext_resource type="Script" path="res://Game.Godot/Scripts/Demo/GameEngineDemo.cs" id="6"]
[ext_resource type="PackedScene" path="res://Game.Godot/Scenes/UI/SettingsPanel.tscn" id="7"]
[ext_resource type="Script" path="res://Game.Godot/Scripts/UI/ThemeApplier.cs" id="8"]
[ext_resource type="Script" path="res://Game.Godot/Scripts/UI/SettingsLoader.cs" id="11"]
[ext_resource type="Script" path="res://Game.Godot/Scripts/Navigation/ScreenNavigator.cs" id="13"]
[ext_resource type="Script" path="res://Game.Godot/Scripts/Bootstrap/InputMapper.cs" id="12"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k4m0")
theme = ExtResource("5")

[node name="InputMapper" type="Node" parent="."]
script = ExtResource("12")
theme = ExtResource("5")

[node name="SettingsLoader" type="Node" parent="."]
script = ExtResource("11")
theme = ExtResource("5")

[node name="ThemeApplier" type="Node" parent="."]
script = ExtResource("8")

[node name="EngineDemo" type="Node" parent="."]
script = ExtResource("6")

[node name="HUD" parent="." instance=ExtResource("2")]

[node name="MainMenu" parent="." instance=ExtResource("3")]

[node name="ScreenRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenNavigator" type="Node" parent="."]
script = ExtResource("13")
ScreenRootPath = NodePath("../ScreenRoot")


[node name="Overlays" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 100
mouse_filter = 1





[node name="SettingsPanel" parent="." instance=ExtResource("7")]

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 260.0

[node name="PublishBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "Publish Event"

[node name="SaveLoadBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "Save + Load (DataStore)"

[node name="LogBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "Print Log"

[node name="Output" type="Label" parent="VBox"]
layout_mode = 2
text = "Ready"

[node name="AddScoreBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "+10 Score"

[node name="LoseHpBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "-5 HP"

